Fix Testimonials too large

--- a/styles/TestimonialCard.module.css
+++ b/styles/TestimonialCard.module.css
@@ -15,7 +15,8 @@
   font-size: 2.5rem;
   font-weight: 500;
   text-align: center;
-  color: var(--text-tertiary)
+  color: var(--text-tertiary);
+  margin-top: 1rem;
 }
 
 .role {
@@ -33,4 +34,29 @@
   display: flex;
   align-items: center;
   margin: 4rem 0;
+}
+
+@media only screen and (max-width: 600px) {
+  .author {
+    font-size: 1.7rem;
+  }
+
+  .role {
+    font-size: 1rem;
+  }
+
+  .description {
+    font-size: 0.9rem;
+  }
+
+  .graphics6 {
+    top: -10vh;
+    left: 0;
+    height: 45vh;
+  }
+
+  .sectionTitle {
+    margin-top: 6vh;
+    font-size: 2rem;
+  }
 }
